unpackaged/main/default/objects/bt_stripe__Blackthorn_Payments_Mobile_Settings__c/bt_stripe__Blackthorn_Payments_Mobile_Settings__c.object-meta.xml
<CustomObject>
    <customSettingsType>Hierarchy</customSettingsType>
    <label>Blackthorn Payments | Mobile Settings</label>
</CustomObject>