unpackaged/main/default/objects/bt_stripe__Blackthorn_Payments_Mobile_Settings__c/fields/bt_stripe__Confirm_Payment_Intents__c.field-meta.xml
<CustomField>
    <fullName>bt_stripe__Confirm_Payment_Intents__c</fullName>
    <defaultValue>true</defaultValue>
    <description>When checked the mobile payments app will confirm payment intents before sending details to Salesforce. When un-checked, payment intents will be confirmed by Salesforce. Payment intents confirmed by Salesforce will include a Customer and the payment method will be attached to the customer for future use, with SCA required.</description>
    <inlineHelpText>When checked the mobile payments app will confirm payment intents before sending details to Salesforce. When un-checked, payment intents will be confirmed by Salesforce. Payment intents confirmed by Salesforce will include a Customer and the payment method will be attached to the customer for future use, with SCA required.</inlineHelpText>
    <label>Confirm Payment Intents</label>
    <type>Checkbox</type>
</CustomField>