unpackaged/main/default/objects/bt_stripe__Blackthorn_Payments_Mobile_Settings__c/fields/bt_stripe__Enable_Offline_Mobile__c.field-meta.xml
<CustomField>
    <fullName>bt_stripe__Enable_Offline_Mobile__c</fullName>
    <defaultValue>false</defaultValue>
    <description>When checked, offline mobile payments are enabled.</description>
    <inlineHelpText>When checked, offline mobile payments are enabled.</inlineHelpText>
    <label>Enable Offline Mobile</label>
    <type>Checkbox</type>
</CustomField>