unpackaged/main/default/objects/bt_stripe__Blackthorn_Payments_Mobile_Settings__c/fields/bt_stripe__Max_Retries__c.field-meta.xml
<CustomField>
    <fullName>bt_stripe__Max_Retries__c</fullName>
    <description>The max number of attempts to fetch the check info.</description>
    <inlineHelpText>The max number of attempts to fetch the check info.</inlineHelpText>
    <label>Max Retries</label>
    <precision>8</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>