unpackaged/main/default/objects/bt_stripe__Blackthorn_Payments_Mobile_Settings__c/fields/bt_stripe__Retry_Interval__c.field-meta.xml
<CustomField>
    <fullName>bt_stripe__Retry_Interval__c</fullName>
    <description>The duration between each retry in seconds</description>
    <inlineHelpText>The duration between each retry in seconds. Retry intervals should be kept to 4 seconds or more.</inlineHelpText>
    <label>Retry Interval</label>
    <precision>8</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>