unpackaged/main/default/objects/bt_stripe__Blackthorn_Payments_Mobile_Settings__c/fields/bt_stripe__Skip_Receipt_Screen__c.field-meta.xml
<CustomField>
    <fullName>bt_stripe__Skip_Receipt_Screen__c</fullName>
    <defaultValue>false</defaultValue>
    <description>When checked, the receipt screen will be bypassed.</description>
    <inlineHelpText>When checked, the receipt screen will be bypassed.</inlineHelpText>
    <label>Skip Receipt Screen</label>
    <type>Checkbox</type>
</CustomField>